--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,9 @@
 {erl_opts, [debug_info]}. %, fail_on_warning]}.
 
-{require_otp_vsn, "R14"}.
-
 {deps_dir, ["deps"]}.
 
 {deps, [
-        {cowboy,   ".*",        {git, "https://github.com/extend/cowboy.git", {branch, "master"}}},
-        {jsx,   ".*",        {git, "https://github.com/spawnfest/jsx.git", {branch, "beamspirit"}}}
+        {couchbeam, ".*",    {git, "https://github.com/benoitc/couchbeam.git",  {branch, "master"}}},
+        {cowboy,   ".*",     {git, "https://github.com/extend/cowboy.git",      {branch, "master"}}},
+        {jsx,   ".*",        {git, "https://github.com/spawnfest/jsx.git",      {branch, "beamspirit"}}}
 ]}.
